@@ -53,12 +53,27 @@ Options:
              the title of this hypertext.
      --gtagsconf file
              load user's configuration from file.
+     --caution
+             includes caution message to prohibit downloading.
      --version
              print version.
      --help
              print help message.
      dir     the directory in which hypertext is generated.
 END_OF_HELP
+$caution_message = <<END_OF_CAUTION;
+<CENTER>
+<BLOCKQUOTE>
+<FONT SIEZE=+3 COLOR=red>CAUTION</FONT><BR>
+This hypertext is HUGE.
+Please don't download whole hypertext using hypertext copy tools.
+Our network cannot afford such traffic.
+Instead, you can generate same thing in your computer using
+<A HREF=$www TARGET=_top>GLOBAL source code tag system</A>.
+Thank you. 
+</BLOCKQUOTE>
+</CENTER>
+END_OF_CAUTION
 #-------------------------------------------------------------------------
 # COMMAND EXISTENCE CHECK
 #-------------------------------------------------------------------------
@@ -454,6 +469,7 @@ if ($'htags_options) {
 $'aflag = $'cflag = $'fflag = $'Fflag = $'lflag = $'nflag = $'Sflag = $'vflag = $'wflag = '';
 $show_version = 0;
 $show_help = 0;
+$include_caution = 0;
 $action_value = '';
 $id_value = '';
 $cgidir = '';
@@ -488,6 +504,8 @@ while ($ARGV[0] =~ /^-/) {
 		$'vflag = 'v';
 	} elsif ($opt =~ /^--warning$/) {
 		$'wflag = 'w';
+	} elsif ($opt =~ /^--caution$/) {
+		$'include_caution = 1;
 	} elsif ($opt =~ /^--title$/) {
 		$opt = shift;
 		last if ($opt eq '');
@@ -1486,7 +1504,12 @@ sub makecommonpart {
 	$index .= "<P ALIGN=right>\n";
 	$index .= "Last updated " . &'date . "<BR>\n";
 	$index .= "This hypertext was generated by <A HREF=$'www TARGET=_top>GLOBAL-$'version</A>.<BR>\n";
-	$index .= "</P>\n<HR>\n";
+	$index .= "</P>\n";
+	$index .= "<HR>\n";
+	if ($'include_caution) {
+		$index .= $'caution_message;
+		$index .= "\n<HR>\n";
+	}
 	if ($'fflag) {
 		$index .= &makesearchpart($'action, $'id);
 		$index .= "<HR>\n";
